--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -13,7 +13,7 @@ export async function getStaticPaths() {
 const { project } = Astro.props;
 const { Content } = await project.render();
 ---
-<SplitLayout2>
+<SplitLayout2 title={project.data.title}>
   <div class="block sm:hidden mb-4"><a class=" internal" href="/">← home</a> / <a class="internal" href="/projects">projects</a></div>
 
   <div class="flex">
