--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,5 +1,4 @@
 ---
-const { title } = Astro.props
 import "../../styles/global.scss";
 import ProjectsList from "../../components/ProjectsList.astro";
 import Layout from "../../layouts/Layout.astro";
@@ -17,7 +16,7 @@ import Layout from "../../layouts/Layout.astro";
 		<link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
     <meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>Work</title>
 	</head>
 	<body>
     <div class="mono text-sm">
