--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,13 +1,9 @@
 ---
 import "../styles/global.scss";
 import Layout from '../layouts/Layout.astro';
-import { bookList } from "../data/books";
-import { Image } from "astro:assets";
-
-const years = [2024, 2023, 2022, 2021];
 ---
 
-<Layout title={"Books"}>
+<Layout title={"About"}>
   <div>
     <div><a class="" href="/">← home</a></div>
     <br>
