--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import "../styles/global.scss";
 import Layout from '../layouts/Layout.astro';
 import Modal from "../components/Modal";
-import Image from "astro/components/Image.astro";
+import { Image } from 'astro:assets';
 import perfume from "../assets/popups/perfume.png"
 ---
 <Layout title={"Annie Qiu"}>
