--- a/src/pages/photos/[id].astro
+++ b/src/pages/photos/[id].astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import { getAlbumImages } from "../../utils/photos";
 import Layout from "../../layouts/Layout.astro";
-import { Image } from "astro:assets";
+import { Image } from 'astro:assets';
 
 export async function getStaticPaths() {
   const albums = await getCollection("albums");
