add lijiang album, edit homepage

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Layout.astro';
     <div><a class="" href="/">← home</a></div>
     <br>
     <div class="text-base mt-2 mb-4 text-left">About this site</div>
-    <div class="text-sm mb-4 text-left text-dark-green/80 max-w-[40em]">
+    <div class="text-sm mb-4 text-left max-w-[40em]">
       This website was built with <a href="https://docs.astro.build/en/getting-started/" class="link">Astro</a> and typeset with <a class="link" href="https://fonts.google.com/specimen/DM+Mono">DM Mono</a> and Apple's System-ui. 
       I made this website with the intention to show the things I've worked as well as bits of my personal life. 
       This website is inspired by other personal sites that treat the website like a garden, sprawling and populated with nooks and crannies, always growing.
