--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,19 +63,19 @@ import perfume from "../assets/popups/perfume.png"
           <div class="flex flex-row w-full">
             <div class="w-32">Currently</div>
             <div class="grid gap-1 w-full">
-              <div>Art residency at <a class="link" href="https://www.acentricspace.com//">ACENTRICSPACE</a> in Zhujiajiao</div>
+              <div>Studio Art Intern at Dartmouth</div>
             </div>
           </div>
           <div class="flex flex-row w-full">
             <div class="w-32">Upcoming</div>
             <div class="grid gap-1 w-full">
-              <div>Studio Art Intern at Dartmouth (2024-2025)</div>
               <div>Forward Deployed Software Engineer at Palantir (starting Summer 2025)</div>
             </div>
           </div>
           <div class="flex flex-row w-full">
             <div class="w-32">Previously</div>
             <div class="grid gap-1 w-full">
+              <div>Art residency at <a class="link" href="https://www.acentricspace.com//">ACENTRICSPACE</a> in Zhujiajiao</div>
               <details>
                 <summary>Designer, Core at <span class="link">DALI Lab</span> <span class="link internal">[see more]</span></a>
                 </summary>
@@ -95,7 +95,7 @@ import perfume from "../assets/popups/perfume.png"
             <summary class="cursor-pointer">Wanna learn even more?</summary>
             <br>
           <div class="flex flex-row w-full">
-            <div class="w-44 sm:w-32 mr-6">Things I like</div>
+            <div class="w-44 sm:w-32 md:w-40 mr-6">Things I like</div>
             <div class="grid gap-1 w-full">
               <div><a class="link internal" href="/books">Literary fiction</a></div>
               <div>Musicals</div>
@@ -121,7 +121,7 @@ import perfume from "../assets/popups/perfume.png"
           </div>
           <br>
           <div class="flex flex-row w-full">
-            <div class="w-44 sm:w-32 mr-6">I am also a</div>
+            <div class="w-44 sm:w-32 md:w-40 mr-6">I am also a</div>
             <div class="grid gap-1 w-full">
               <div>Third-culture kid</div>
               <div>ENFJ</div>
@@ -132,14 +132,14 @@ import perfume from "../assets/popups/perfume.png"
           </div>
           <br>
           <div class="flex flex-row w-full">
-            <div class="w-44 sm:w-32  mr-6">More Links</div>
+            <div class="w-44 sm:w-32 md:w-40 mr-6">More Links</div>
             <div class="grid gap-1 w-full">
               <div><a class="link" href="https://www.linkedin.com/in/annierqiu/">LinkedIn</a>, <a class="link" href="https://github.com/annie-qiu">GitHub</a></div>
             </div>
           </div>
           <br>
           <div class="flex flex-row w-full">
-            <div class="w-44 sm:w-32  mr-6">Currently Reading</div>
+            <div class="w-44 sm:w-32 md:w-40 mr-6">Currently Reading</div>
             <div class="grid gap-1 w-full">
               <div>Funny Weather by Olivia Laing</div>
             </div>
