--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -20,12 +20,10 @@ import ProjectsList from "../../components/ProjectsList.astro";
 	<body>
     <div class="mono text-sm">
       <div class="flex flex-row h-dvh">
-        <div class="inline w-full sm:max-w-[30em]">
-        <ProjectsList/>
-        </div>
-        <div class="hidden sm:inline flex flex-col overflow-y-auto w-full p-4 sm:p-6">
-          <div class="max-w-[45em]">
-          </div>
+        <div class="inline w-full sm:max-w-[80em]">
+					<div class="w-full">
+					<ProjectsList/>
+					</div>
         </div>
       </div>
     </div>
