update book and link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import perfume from "../assets/popups/perfume.png"
       <div>
         <span>Annie Qiu is an 
           <a class="link" href="https://annieqiu.cargo.site/">artist</a> +   
-          <a class="link internal" href="/work">programmer / designer</a> 
+          <a class="link internal" href="/projects">programmer / designer</a> 
         </span>
         <span class="text-2xl">✧</span>
       </div>
@@ -115,7 +115,7 @@ import perfume from "../assets/popups/perfume.png"
                   </div>
                 </Modal>
               </div>
-              <div><a class="link" href="https://letterboxd.com/film/all-of-us-strangers/">All of Us Strangers (2023)</a></div>
+              <div>All of Us Strangers (2023)</div>
               <div>Video editing</div>
             </div>
           </div>
@@ -141,7 +141,7 @@ import perfume from "../assets/popups/perfume.png"
           <div class="flex flex-row w-full">
             <div class="w-44 sm:w-32 md:w-40 mr-6">Currently Reading</div>
             <div class="grid gap-1 w-full">
-              <div>Funny Weather by Olivia Laing</div>
+              <div>Autumn by Ali Smith</div>
             </div>
           </div>
         </details>
